--- a/docs/assets/tiles.css
+++ b/docs/assets/tiles.css
@@ -1,5 +1,5 @@
 content {
-    color :white;
+    color :black;
 }
 content * {
     padding-left: 10px;
@@ -18,10 +18,10 @@ content h2 {
 
 .catSection { 
     flex: 1 0 300px; 
-    background-color: #fff; 
+    background-color: #eee; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     padding: 20px; 
-    border-radius: 10px; 
+    border-radius: 5px; 
     transition: transform 0.3s ease-in-out; 
     color:black
 } 
