--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -184,6 +184,64 @@ body {
     80% {background-color: #1c312a;}
 }
 
+#hamburger-icon {
+    color: white !important;
+    background-color: transparent !important;
+}
+
+.mobile-hrefs {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999999;
+    opacity: 0.99;
+    background-color: #1f2338;
+    display: none;
+}
+
+.mobile-hrefs .content-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 80px;
+}
+
+
+.mobile-hrefs .content-container a {
+    color: white;
+    text-decoration: none;
+    font-size: 22px;
+    margin-bottom: 8px;
+    text-align: center;
+    font-family: pRegular;
+}
+
+.mobile-hrefs .content-container h1 {
+    color: white;
+    text-align: center;
+    font-family: pSemiBold;
+    font-size: 27px;
+    margin-bottom: 20px;
+}
+
+.close-button-container {
+    display: flex;
+    justify-content: right;
+    padding: 20px 20px;
+}
+
+.close-button-container button {
+    background-color: transparent;
+    color: white;
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    border: none;
+
+}
+
 @media (max-width: 1400px) {
     .quick-links a {
         font-size: 12px;
