--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -87,6 +87,21 @@ Palette
     align-items: center;
 }
 
+.hero-section-category {
+    width: 100%;
+    padding: 40px 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-section-category .text {
+    font-family: pRegular;
+    max-width: 45%;
+    border-radius: 10px;
+    color: white;
+}
+
 .hero-section .text {
     font-family: pRegular;
     max-width: 45%;
@@ -94,9 +109,23 @@ Palette
     color: white;
 }
 
+.hero-section-category .text h3 {
+    font-family: pBold;
+    font-size: 35px;
+    text-align: center;
+}
+
 .hero-section .text h3 {
     font-family: pBold;
     font-size: 35px;
+}
+
+.hero-section-category .text p {
+    font-family: pRegular;
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .hero-section .text p {
@@ -104,6 +133,15 @@ Palette
     font-size: 18px;
     margin-top: 15px;
     margin-bottom: 20px;
+}
+
+.hero-section-category .text p a {
+    padding: 5px 10px;
+    background-color: rgba(255, 255, 255, 0.696);
+    border-radius: 10px;
+    color: black;
+    font-size: 17px;
+    text-decoration: none;
 }
 
 .hero-section .text a {
