--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -25,6 +25,11 @@ html, body {
     scroll-behavior: smooth;
 }
 
+em {
+    font-weight: bold;
+    font-style: italic;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
