--- a/docs/assets/popups.css
+++ b/docs/assets/popups.css
@@ -40,9 +40,145 @@
     position: relative;
     background: white;
     padding: 2em 2em;
-    border-radius: 4px;
+    border-radius: 16px;
     max-height: 80%;
     max-width: 60%;
     min-width: 40%;
     overflow-y: auto;
+}
+
+.challenge h1 {
+    font-weight: 500;
+}
+
+.challenge table tbody tr{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.challenge table tbody .input_fields {
+    width: 35%;
+    transition: width 200ms;
+}
+
+.challenge table tbody tr td {
+    margin: 10px 0px;
+}
+
+.challenge table tbody tr td:first-child {
+    margin-bottom: 10px;
+}
+
+.challenge table tbody tr td:last-child {
+    margin-top: 10px;
+}
+
+.challenge table tbody .input_fields input {
+    padding: 7px 15px;
+    font-size: 15px;
+    border: none;
+    outline: none;
+}
+
+.challenge table tbody tr td {
+    color: black;
+}
+
+.challenge table tbody .input_fields:focus-within {
+    width: 45%;
+    transition: width 200ms;
+}
+
+.challenge table {
+    background-color: rgba(94, 121, 148, 0.285);
+    border-radius: 16px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 20px;
+}
+
+.challenge table tbody hr {
+    border: 0.3px solid rgb(180, 180, 180);
+}
+
+.challenge #panel {
+    display: inline;
+    font-size: 14px;
+    border-radius: 20px;
+    margin-left: 12px;
+}
+
+.challenge .header_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center !important;
+}
+
+.panel-heading a {
+    color: black;
+}
+
+.panel-heading a h4 {
+    font-weight: 500;
+}
+
+[id^="collapse"] {
+    padding: 10px 5px;
+}
+
+@media (max-width: 1000px ) {
+
+    .challenge table tbody .input_fields {
+        width: 45%;
+        transition: width 200ms;
+    }
+
+}
+
+@media (max-width: 738px ) {
+
+    .challenge .header_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center !important;
+        text-align: center;
+    }
+
+    .challenge .header_container h6 {
+        margin-top: 15px;
+    }
+
+    .challenge table tbody tr{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding: 0px 5px;
+    }
+
+    .challenge table tbody tr td {
+        padding: 0px 5px;
+        width: 100%;
+    }
+
+    .challenge table tbody .input_fields {
+        width: 100%;
+    }
+
+    .challenge table tbody .input_fields:focus-within {
+        width: 100%;
+    }
+
+    .panel-heading a {
+        color: black;
+        text-align: center;
+    }
+
+    .DOWNLOAD {
+        width: 100% !important;
+    }
+
 }
