--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -91,7 +91,7 @@ em {
 }
 
 .hero-section-category .text {
-    max-width: 45%;
+    max-width: 75%;
     border-radius: 10px;
     color: white;
 }
@@ -117,6 +117,7 @@ em {
     font-size: 18px;
     margin-top: 15px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .hero-section-category .text b{
@@ -201,9 +202,10 @@ footer {
     color: black;
 }
 
-footer div a {
+footer a {
     color: #5c5a73;
     text-decoration: none;
+    margin-left: 5px;
 }
 
 body {
@@ -297,7 +299,7 @@ body {
     }
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1275px) {
     .catcontainer {
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
@@ -316,14 +318,32 @@ body {
     }
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1100px) {
 
-    .hero-section {
-        flex-direction: column-reverse;
-        justify-content: center;
+    .display img {
+        display: none;
     }
 
     .hero-section .text {
+        max-width: 100%;
+        text-align: center;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+}
+
+
+@media (max-width: 1030px) {
+
+    .hero-section-category {
+        flex-direction: column-reverse;
+        justify-content: center;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .hero-section-category .text {
         max-width: 100%;
         text-align: center;
     }
